--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "couch2elastic4sync:init": "./scripts/couch2elastic4sync/init",
     "couch2elastic4sync:load": "./scripts/couch2elastic4sync/load",
     "couch2elastic4sync:reset": "./scripts/couch2elastic4sync/reset",
-    "create-entities-dump": "./scripts/dumps/prepare_entities_ndjson_dump",
+    "create-dumps": "./scripts/dumps/prepare_dumps",
     "debug": "DEBUG=express:* coffee server.coffee",
     "delete-api-test-databases": "./tests/api/scripts/delete_databases",
     "inspect": "node --inspect --inspect-brk ./node_modules/.bin/coffee server.coffee",
